Added about vijay

--- a/vij.html
+++ b/vij.html
@@ -2,3 +2,4 @@
   <h1>Hellow vIKAY</h1>
 </center>
 <hr>
+<p>Vikay is Joseph Vijay Chandrasekhar (born 22 June 1974), known professionally as Vijay, is an Indian actor and singer who works mainly in Tamil cinema. He is among the highest paid actors in India and has featured in Forbes India ' s Celebrity 100 list on seven occasions. He has played the lead in 67 films.</p>
